Add ability to get all questions
